tests/unit/azure/resources/kubespray/wc/ingress-nginx/networkpolicy.yaml
---
# Source: networkpolicy-generator/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    helm.sh/chart: networkpolicy-generator-0.1.0
    app.kubernetes.io/name: networkpolicy-generator
    app.kubernetes.io/instance: networkpolicy
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  name: cert-manager-http01-solver
  namespace: ingress-nginx
spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
    - Ingress
  ingress:
    # base: ingress-rule-ingress
    - from:
        - namespaceSelector:
            matchLabels: 
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels: 
              app.kubernetes.io/component: controller
              app.kubernetes.io/name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8089
